@@ -1,5 +1,11 @@
 2001-03-05  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&handle_options): Change the RE so that the third
+	part of the versions always exist.
+	(&file_contents): Don't pass uninitialized values to &transform.
+
+2001-03-05  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&file_contents): Require a hash as second argument.
 	Adjust callers.
 
